@@ -69,7 +69,7 @@ class Note < ActiveRecord::Base
              project: [:project_members, { group: [:group_members] }])
   end
 
-  before_validation :clear_blank_line_code!
+  before_validation :nullify_blank_type, :nullify_blank_line_code
   after_save :keep_around_commit
 
   class << self
@@ -216,10 +216,6 @@ class Note < ActiveRecord::Base
     !system?
   end
 
-  def clear_blank_line_code!
-    self.line_code = nil if self.line_code.blank?
-  end
-
   def can_be_award_emoji?
     noteable.is_a?(Awardable)
   end
@@ -236,5 +232,13 @@ class Note < ActiveRecord::Base
 
   def keep_around_commit
     project.repository.keep_around(self.commit_id)
+  end
+
+  def nullify_blank_type
+    self.type = nil if self.type.blank?
+  end
+
+  def nullify_blank_line_code
+    self.line_code = nil if self.line_code.blank?
   end
 end
