@@ -5,6 +5,7 @@ v 8.10.1 (unreleased)
   - Gracefully handle case when keep-around references are corrupted or exist already. !5430
   - Add detailed info on storage path mountpoints. !5437
   - Fix Error 500 when creating Wiki pages with hyphens or spaces. !5444
+  - Fix bug where replies to commit notes displayed in the MR discussion tab wouldn't show up on the commit page. !5446
 
 v 8.10.0
   - Fix profile activity heatmap to show correct day name (eanplatter)
